--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "mariadb": "^3.0.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "0.3.6",
-    "mysql": "^2.14.1"
+    "mysql": "^2.14.1",
+    "dotenv": "^16.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
