--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mariadb": "^3.0.0",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "0.3.6",
     "mysql": "^2.14.1",
-    "dotenv": "^16.0.1"
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "0.3.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.10",
     "husky": "^8.0.1",
+    "lint-staged": "^13.0.2",
     "prettier": "^2.6.2",
     "ts-node": "10.7.0",
     "ts-node-dev": "^1.1.8",
@@ -37,9 +38,15 @@
     "tslint-config-prettier": "^1.18.0",
     "typescript": "4.5.2"
   },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "npm run lint && npm run prettier:write",
+      "git add"
+    ]
+  },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && npm run prettier:write"
+      "pre-commit": "lint-staged"
     }
   }
 }
