--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
-      "npm run lint && npm run prettier:write"
+      "npm run prettier:write"
     ]
   },
   "husky": {
